--- a/PaulZero.WindowsRoutine.Wpf/App.xaml
+++ b/PaulZero.WindowsRoutine.Wpf/App.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PaulZero.WindowsRoutine.Wpf"
              StartupUri="Windows/MainWindow.xaml"
-             Exit="App_Exit">
+             DispatcherUnhandledException="Application_DispatcherUnhandledException"
+             Exit="App_Exit"
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
