--- a/PaulZero.WindowsRoutine.Wpf/AppStyles.xaml
+++ b/PaulZero.WindowsRoutine.Wpf/AppStyles.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:PaulZero.WindowsRoutine.Wpf">
+                    xmlns:local="clr-namespace:PaulZero.WindowsRoutine.Wpf"
+                    xmlns:controls="clr-namespace:PaulZero.WindowsRoutine.Wpf.Controls">
     
     <!-- Margin values -->
     
@@ -61,6 +62,26 @@
     <SolidColorBrush x:Key="SubtleErrorBackground" Color="LightPink" />
     <SolidColorBrush x:Key="SubtleErrorForeground" Color="Black" />
 
+    <!-- Validation error template -->
+
+    <ControlTemplate x:Key="ValidationTemplate">
+        <StackPanel>
+            <AdornedElementPlaceholder />
+            <Border Background="{StaticResource ErrorBackground}" CornerRadius="2">
+                <Border.Margin>
+                    <Thickness 
+                            Left="0"
+                            Top="{StaticResource MarginValueSmall}" 
+                            Right="0"
+                            Bottom="0" />
+                </Border.Margin>
+                <TextBlock Foreground="{StaticResource ErrorForeground}"
+                                       Padding="{StaticResource MarginMedium}"
+                                       Text="You must select at least one day for the event to run."/>
+            </Border>
+        </StackPanel>
+    </ControlTemplate>
+
     <!-- Element defaults -->
 
     <Style TargetType="TextBlock">
@@ -72,10 +93,6 @@
         <Setter Property="Margin" Value="4" />
         <Setter Property="Padding" Value="16 4" />
     </Style>
-    
-    
-
-    
 
     <Style TargetType="TextBlock" x:Key="QuotedString" BasedOn="{StaticResource {x:Type TextBlock}}">
         <Setter Property="FontStyle" Value="Italic" />
@@ -169,6 +186,91 @@
         <Setter Property="Margin" Value="{StaticResource MarginSmall}" />
     </Style>
 
+    <Style TargetType="TextBox" x:Key="DialogBodyTextBox">
+        <Setter Property="Margin" Value="{StaticResource MarginSmall}" />
+        <Setter Property="Padding" Value="{StaticResource MarginSmall}" />
+        <Setter Property="FontSize" Value="{StaticResource FontSizeSmall}" />
+    </Style>
+
+    <Style TargetType="TextBox" x:Key="ValidatedDialogBodyTextBox" BasedOn="{StaticResource DialogBodyTextBox}">
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationTemplate}" />
+        
+        <Style.Triggers>            
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Margin">
+                    <Setter.Value>
+                        <Thickness 
+                            Left="{StaticResource MarginValueSmall}"
+                            Top="{StaticResource MarginValueSmall}" 
+                            Right="{StaticResource MarginValueSmall}"
+                            Bottom="38" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
+    <Style TargetType="ComboBox" x:Key="DialogBodyComboBox">
+        <Setter Property="Margin" Value="{StaticResource MarginSmall}" />
+        <Setter Property="Padding" Value="{StaticResource MarginSmall}" />
+        <Setter Property="FontSize" Value="{StaticResource FontSizeSmall}" />
+    </Style>
+
+    <Style TargetType="ComboBox" x:Key="ValidatedDialogBodyComboBox" BasedOn="{StaticResource DialogBodyComboBox}">
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationTemplate}" />
+
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Margin">
+                    <Setter.Value>
+                        <Thickness 
+                            Left="{StaticResource MarginValueSmall}"
+                            Top="{StaticResource MarginValueSmall}" 
+                            Right="{StaticResource MarginValueSmall}"
+                            Bottom="38" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="controls:DayPicker" x:Key="ValidatedDialogBodyDayPicker">
+        <Setter Property="Margin" Value="{StaticResource MarginSmall}" />
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationTemplate}" />
+
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Margin">
+                    <Setter.Value>
+                        <Thickness 
+                            Left="{StaticResource MarginValueSmall}"
+                            Top="{StaticResource MarginValueSmall}" 
+                            Right="{StaticResource MarginValueSmall}"
+                            Bottom="38" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="controls:TimePicker" x:Key="ValidatedDialogBodyTimePicker">
+        <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationTemplate}" />
+
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Margin">
+                    <Setter.Value>
+                        <Thickness 
+                            Left="{StaticResource MarginValueSmall}"
+                            Top="{StaticResource MarginValueSmall}" 
+                            Right="{StaticResource MarginValueSmall}"
+                            Bottom="32" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style TargetType="TextBlock" x:Key="DialogBodyHeading">
         <Setter Property="FontSize" Value="{StaticResource FontSizeMedium}" />
         <Setter Property="FontWeight" Value="DemiBold" />
@@ -195,6 +297,8 @@
         <Style.Resources>
             <Style TargetType="TextBlock" BasedOn="{StaticResource DialogBodyTextBlock}" />
             <Style TargetType="ProgressBar" BasedOn="{StaticResource DialogBodyProgressBar}" />
+            <Style TargetType="ComboBox" BasedOn="{StaticResource DialogBodyComboBox}"/>
+            <Style TargetType="TextBox" BasedOn="{StaticResource DialogBodyTextBox}" />
         </Style.Resources>
     </Style>
 
@@ -231,4 +335,6 @@
     <Style TargetType="StackPanel" x:Key="DialogErrorFooter" BasedOn="{StaticResource DialogFooter}">
         <Setter Property="Background" Value="{StaticResource ErrorBackground}"/>
     </Style>
+    
+    
 </ResourceDictionary>
