--- a/PaulZero.WindowsRoutine.Wpf/Controls/TimePicker.xaml
+++ b/PaulZero.WindowsRoutine.Wpf/Controls/TimePicker.xaml
@@ -6,15 +6,20 @@
              xmlns:local="clr-namespace:PaulZero.WindowsRoutine.Wpf.Controls"
              xmlns:vm="clr-namespace:PaulZero.WindowsRoutine.Wpf.Models.View"
              mc:Ignorable="d" d:DesignHeight="50"  d:DesignWidth="800"
-             Name="TimePickerControl">
-    <Grid>
+             Name="TimePickerControl" Padding="0">
+    <UserControl.Resources>
+        <ResourceDictionary Source="../AppStyles.xaml" />
+    </UserControl.Resources>    
+    <Grid Margin="{StaticResource MarginSmall}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <ComboBox Grid.Column="0"
-                  Padding="2"
+                  Padding="{StaticResource MarginSmall}"
+                  FontSize="{StaticResource FontSizeSmall}"
+                  Margin="0"
                   HorizontalContentAlignment="Center"
                   VerticalContentAlignment="Center"
                   SelectedItem="{Binding ElementName=TimePickerControl, Path=Hours, Mode=TwoWay}"                  
@@ -22,7 +27,9 @@
                   ItemStringFormat="D2" />
         
         <ComboBox Grid.Column="1"
-                  Padding="2"
+                  Padding="{StaticResource MarginSmall}"
+                  FontSize="{StaticResource FontSizeSmall}"
+                  Margin="0"
                   HorizontalContentAlignment="Center"
                   VerticalContentAlignment="Center"
                   SelectedItem="{Binding ElementName=TimePickerControl, Path=Minutes, Mode=TwoWay}"
