--- a/PaulZero.WindowsRoutine.Wpf/Windows/ErrorWindow.xaml
+++ b/PaulZero.WindowsRoutine.Wpf/Windows/ErrorWindow.xaml
@@ -3,8 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PaulZero.WindowsRoutine.Wpf.Windows"
-        xmlns:view="clr-namespace:PaulZero.WindowsRoutine.Wpf.Models.View"
+        xmlns:vmw="clr-namespace:PaulZero.WindowsRoutine.Wpf.Models.View.Window"
         mc:Ignorable="d"
         Title="{Binding Title}"
         Width="800"
@@ -15,7 +14,7 @@
         <ResourceDictionary Source="../AppStyles.xaml" />
     </Window.Resources>    
     <Window.DataContext>
-        <view:ErrorWindowViewModel />
+        <vmw:ErrorWindowViewModel />
     </Window.DataContext>   
     
     <StackPanel Style="{StaticResource DialogRoot}">
