--- a/PaulZero.WindowsRoutine.Wpf/AppStyles.xaml
+++ b/PaulZero.WindowsRoutine.Wpf/AppStyles.xaml
@@ -66,7 +66,7 @@
 
     <ControlTemplate x:Key="ValidationTemplate">
         <StackPanel>
-            <AdornedElementPlaceholder />
+            <AdornedElementPlaceholder x:Name="AdornedElement" />
             <Border Background="{StaticResource ErrorBackground}" CornerRadius="2">
                 <Border.Margin>
                     <Thickness 
@@ -77,7 +77,7 @@
                 </Border.Margin>
                 <TextBlock Foreground="{StaticResource ErrorForeground}"
                                        Padding="{StaticResource MarginMedium}"
-                                       Text="You must select at least one day for the event to run."/>
+                                       Text="{Binding ElementName=AdornedElement, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
             </Border>
         </StackPanel>
     </ControlTemplate>
